# LEANN

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-reusable.yml
apps/: base_rag_example.py  colqwen_rag.py
apps/history_data/: history.py
benchmarks/: flashlib_ivf_vs_faiss_ivf.py
benchmarks/contextbench/: .gitignore  README.md
benchmarks/contextbench/mitmproxy_addons/: trace_recorder.py
benchmarks/contextbench/scripts/: auto_run.py  batch_run_random.py  batch_run_selected.py  prepare_repos_with_leann.py
benchmarks/financebench/: evaluate_financebench.py
docs/: CHANGELOG.md  configuration-guide.md  faq.md  flashlib_backend_guide.md  openclaw-setup.md  user-scripts.md
docs/issue-proposals/: smart-embedding-default.md
skills/leann-memory/: README.md  claw.json  instructions.md
tests/: README.md  test_build_from_arrays.py  test_cli_ask.py  test_cli_prompt_template.py  test_cpu_only_install.py  test_embedding_batch_size.py  test_embedding_prompt_template.py  test_embedding_server_manager.py  test_flashlib_ivf_backend.py  test_hybrid_search.py  test_lmstudio_bridge.py  test_metadata_filtering.py  test_minimax_provider.py  test_novita_provider.py  test_passage_id_scheme.py  test_prompt_template_e2e.py  test_prompt_template_persistence.py  test_react_dual_source.py  test_readme_examples.py  test_rebuild_cli.py  test_sync.py  test_token_truncation.py  test_watch_sync_scope.py
tests/openclaw/: conftest.py  docker-compose.yml  run_docker_test.sh  test_build_and_search.py  test_mcp_e2e.py  test_mcp_protocol.py  test_openclaw_e2e.py  test_skill_manifest.py
tests/openclaw/fixtures/: MEMORY.md
tests/openclaw/fixtures/memory/: 2026-02-15.md  2026-02-20.md  2026-02-25.md
